--- a/Does my number look big in this.ipynb
+++ b/Does my number look big in this.ipynb
@@ -18,29 +18,26 @@
     "\n",
     "Your code must return true or false depending upon whether the given number is a Narcissistic number in base 10.\n",
     "\n",
-    "Error checking for text strings or other invalid inputs is not required, only valid integers will be passed into the function. 419\n"
+    "Error checking for text strings or other invalid inputs is not required, only valid integers will be passed into the function.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def narcissistic(value):\n",
-    "    power = len(str(value))\n",
-    "    sum1 = 0\n",
-    "    for i in range(len(str(value))):\n",
-    "        sum1 += int(str(value)[i])**power\n",
-    "    if sum1 == value:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False"
+    "    length_value = len(str(value))\n",
+    "    total = 0\n",
+    "    for i in range(length_value):\n",
+    "        total = total + int(str(value)[i]) ** length_value\n",
+    "    return total == value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,47 +46,13 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "narcissistic(1634)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def positive_sum(lst):\n",
-    "    lst1 = []\n",
-    "    for i in range(len(lst)):\n",
-    "        if lst[i]>0:\n",
-    "            lst1.append(lst[i])\n",
-    "    return sum(lst1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "positive_sum([-1,2,3,4,-5])"
+    "narcissistic(371)"
    ]
   },
   {
@@ -116,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
