--- a/Returning Strings.ipynb
+++ b/Returning Strings.ipynb
@@ -15,29 +15,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def greet(name):\n",
-    "    return \"Hello, \" + name + \" how are you doing today?\""
+    "def greetings(name):\n",
+    "    return \"Hello, \" + name + \" how are you doing today?\" "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello, Fırat how are you doing today?'"
+       "'Hello, Fehmiboy how are you doing today?'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "greet(\"Fırat\")"
+    "fehmi = \"Fehmiboy\"\n",
+    "greetings(fehmi)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculator(num1, num2, ope):\n",
+    "    if ope == \"+\":\n",
+    "        return num1 + float(num2)\n",
+    "    elif ope == \"-\":\n",
+    "        return num1 - num2\n",
+    "    elif ope == \"*\":\n",
+    "        return num1 * num2\n",
+    "    elif ope == \"/\":\n",
+    "        return num1 / num2\n",
+    "    else:\n",
+    "        return (\"Not a relevant operator\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculator(10, \"3\", \"+\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3535353535'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"35\" * 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
